recursion.cons.lessons.recursion.cons.Min.scala.error
min:8: error: ':' expected but '.' found.
def min2(a.Int, b.Int): Boolean = {
          ^min:14: error: identifier expected but '}' found.
 }
 ^